fix(web): string select options not showing dropdown

--- a/src/Web/Public/input.css
+++ b/src/Web/Public/input.css
@@ -46,7 +46,7 @@
   background: royalblue !important;
 }
 
-.ts-wrapper.focus.input-active > .ts-dropdown {
+.ts-wrapper.focus.input-active.multi > .ts-dropdown {
   display: none !important;
 }
 
